<?xml version="1.0" encoding="utf-8" standalone="no"?>
<!-- /*
 * Copyright (C) 2010 Lluís Esquerda
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */ -->
<resources>
    <string name="app_name">Open Bicing</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_location">My Location</string>
    <string name="menu_view_all">View All</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="no_bikes_around">There are no bikes around you. You should try resizing the home radius dragging the blue handle or checking \"View all\" in the options menu</string>
    <string name="bikes">bikes</string>
    <string name="free">spaces</string>
    <string name="network_error">Network error</string>
    <string name="loading">Loading, please wait...</string>
    <string name="preferences_location">My Location</string>
    <string name="preferences_location_title">Select a Location Provider</string>
    <string name="preferences_location_summary">Click to change your location providers (Network and GPS)</string>
    <string name="preferences_network">Bike Network</string>
    <string name="preferences_network_title">Select a bike network</string>
    <string name="preferences_network_summary">Manually find your city\'s bike network</string>
    <string name="preferences_cache_network_title">Clear cache</string>
    <string name="preferences_cache_network_summary">Restart the app state as it was just installed (keeps the favorites)</string>
    <string name="preferences_autofind_network_title">Automatic network selection</string>
    <string name="preferences_autofind_network_summary">Allow automatic network selection based on your current location</string>
    
    
    <string name="bike_network_alert_title">Bike network selection</string>
    <string name="bike_network_alert_text">I can find a bike network for you, based on you position.\nOr.. you can select it manually from a list of networks. \nWhat would it be?</string>
    
    <string name="bike_network_alert_error_title">No networks found</string>
    <string name="bike_network_alert_error_text">Please try again, or select a network from the list</string>
    <string name="try_again">Try Again</string>
    <string name="manual">Manual</string>
    <string name="bike_network_alert_success_title">Network Found</string>
    <string name="bike_network_alert_success_text0">I have detected</string>
    <string name="bike_network_alert_success_text1">Is that accurate?</string>
    <string name="sure">Sure</string>
    <string name="automatic">Automatic</string>
    <string name="get_bike_mode">Find a bike</string>
    <string name="park_bike_mode">Find a parking</string>
    <string name="fling_tooltip">Slide through the green arrow to reveal the bookmarks menu</string>
    <string name="c2dm_new_feature">With this version there\'s a new feature I would like to show you..\nIt consists on getting a notification when an empty station has a bike ready for you.\nI know this app is not always easy to use, so I have made a tour just for you. You can always redo the tour through the settings menu.\n\nSo, would you like to see how it works?</string>
    <string name="c2dm_new_feature_idea">If you selected an station which already had bikes, you have probably received a notification by now!\n\nAssume you don\'t mind waiting for an station to have a bike for you. You might be on a cafe, or chatting with a friend. Using this, you don\'t need to be continuously checking for the status on that station, just wait for Open Bicing to notify you through Google\'s awesome C2DM service, even if the application is closed!\nYou can add as many alarms as you want. When you receive a notification, all other alarms will be automatically cleared.\n\nThis is an EXPERIMENTAL alpha feature.\n\nIf you want to provide any feedback, contact me on twitter @ctbikes or through email.\n\nThanks for taking this tour, and have a great time!</string>
    <string name="new_feature">There\'s a new feature!</string>
    <string name="about_this_feature">About this feature</string>
    <string name="nope">Nope</string>
    <string name="c2dm_tour_doing_great">You are doing great! Click on that alarm icon, next to the star</string>
    <string name="c2dm_tour_start">First, select a station. To test it fast, just select any station with available bikes</string>
    <string name="c2dm_tour_green_arrow">Now, reveal the contextual menu by sliding across the green arrow in any direction</string>
    <string name="preferences_c2dm_tour_title">CityBikes Notifications Tour</string>
    <string name="preferences_c2dm_tour_summary">Show Open Bicing Notifications Tour the next time you use the app</string>
    <string name="preferences_c2dm_tour_toast_ok">A help tour will be shown the next time you use this app</string>
    <string name="preferences_c2dm_tour_toast_ko">Open Bicing on your city does not yet support C2DM Notifications, but will do soon!</string>
    <string name="preferences_tour_title">CityBikes Help Tour</string>
    <string name="preferences_tour_summary">Show Open Bicing Help Tour the next time you use the app</string>
    <string name="help">Help</string>
    <string name="c2dm_added">You will be notified when there are ready bikes on this station!</string>
</resources>
