<?xml version="1.0" encoding="utf-8"?>
<!-- /*
 * Copyright (C) 2010 Lluís Esquerda
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */ -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preferences_location">
            <PreferenceScreen
            android:key="citybikes.preferences_location"
            android:title="@string/preferences_location_title"
            android:summary="@string/preferences_location_summary">
        	</PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_network">
        	<!-- <CheckBoxPreference
            android:key="autofind_network"
            android:defaultValue="false"
            android:title="@string/preferences_autofind_network_title"
            android:summary="@string/preferences_autofind_network_summary" />-->
            <PreferenceScreen
            android:key="citybikes.preferences_network"
            android:title="@string/preferences_network_title"
            android:summary="@string/preferences_network_summary">
        	</PreferenceScreen>
        	<PreferenceScreen
            android:key="citybikes.preferences_cache_network"
            android:title="@string/preferences_cache_network_title"
            android:summary="@string/preferences_cache_network_summary">
        	</PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/help">
        	<!-- <PreferenceScreen
            android:key="citybikes.preferences_tour"
            android:title="@string/preferences_tour_title"
            android:summary="@string/preferences_tour_summary">
        	</PreferenceScreen>-->
            <PreferenceScreen
            android:key="citybikes.preferences_c2dm_tour"
            android:title="@string/preferences_c2dm_tour_title"
            android:summary="@string/preferences_c2dm_tour_summary">
        	</PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>